--- a/log_output/README
+++ b/log_output/README
@@ -25,8 +25,7 @@ Here are the recommended steps to get started:
 ```bash
 # Complete setup: build image, create cluster, and deploy
 make rebuild
-
-# Enable detailed debug output
+# or Enable detailed debug output
 make rebuild DEBUG_ENABLED=true
 
 # View application logs in real-time
